config bdd